# main

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  ruff.toml  tes1t.db
src/: auth.py  config.py  dependencies.py  exceptions.py  hashing.py  main.py  security.py  settings.py  validators.py
src/alembic/: env.py
src/alembic/versions/: 0c942acaaf97_update_user_model_for_google_scoper.py  1d87fafac1a6_update_models_with_new_fields_tables.py  2934bc9ca919_add_user_table.py  582ce189462b_update_user_model_for_google_scopesrss.py  b804cf699ec7_update_user_model_for_google_scope.py  (+2 more)
src/db/: __init__.py  database.py  default_room.py  message.py  room_members.py  user.py  user_room.py
src/repositories/: auth_repository.py  auth_token_repository.py  message_repository.py  user_repository.py  user_room_repository.py
src/routers/: auth_access_token_info.py  auth_routers.py  auth_routes.py  auth_token_routes.py  auth_user_routes.py  main_routes.py  user_room_routes.py  user_routers.py  ws_room_router.py  ws_routers.py
src/schemas/: auth_schemas.py  message_schemas.py  room_members_schemas.py  user_room_schemas.py  user_schemas.py
src/service/: auth_service.py  database_service.py  user_service.py
src/services/: auth_service.py  auth_services.py  auth_token_service.py  connection_service.py  room_service.py  user_room_service.py  user_services.py  websocket_services.py
src/websocket/: socket_service.py
tests/schemas/: test_message_schemas.py  test_room_members_schemas.py  test_user_room_schemas.py  test_user_schemas.py
(+4 files in other folders)
