[tool.poetry]
name = "freenglish"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.114.0"
uvicorn = {extras = ["standart"], version = "^0.30.6"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic-settings = "^2.4.0"
python-dotenv = "^1.0.1"
pydantic = {extras = ["email"], version = "^2.9.0"}
sqlalchemy = "^2.0.34"
alembic = "^1.13.2"
aiosqlite = "^0.20.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
